--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mui/material": "^5.0.6",
     "next": "^11.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
