--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/moment": "^2.11.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
+    "axios": "^0.24.0",
+    "date-fns": "^2.0.0-beta.5",
+    "moment": "^2.29.1",
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "react-toastify": "^8.0.3",
+    "sass": "^1.43.4",
+    "swr": "^1.0.1",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
