--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@date-io/moment": "^2.11.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.5",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "axios": "^0.24.0",
