--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@date-io/moment": "^2.11.0",
@@ -26,8 +27,15 @@
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
+    "babel-jest": "^27.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.3.1",
+    "jest-dom": "^4.0.0",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.4.4"
   }
 }
